# CrewOptimizer

./: CMakeLists.txt  compile_commands.json
CrewOptimizer/: Complement.cpp  ConstraintBase.cpp  Constraints.hpp  Definition.hpp  Duty.cpp  Duty.hpp  IoController.cpp  IoController.hpp  OptEngine.cpp  OptEngine.hpp  Pairing.cpp  Parser.hpp  Sector.cpp  Utility.cpp  main.cpp
CrewOptimizer.xcodeproj/: project.pbxproj
CrewOptimizer.xcodeproj/xcuserdata/yunlongliu.xcuserdatad/xcschemes/: xcschememanagement.plist
DerivedData/CrewOptimizer/Index/UniDB/CrewOptimizer.xcindex/v13/p2765--ecb295/: lock.mdb
DerivedData/CrewOptimizer/Logs/Index Build/: LogStoreManifest.plist
DerivedData/CrewOptimizer/Logs/Issues/: LogStoreManifest.plist
DerivedData/CrewOptimizer/Logs/Run/: LogStoreManifest.plist
data/: ez.expand.segs  ez.expand.segs.out  ez.expand.segs.out.correct
src/: Airport.cpp  Airport.hpp  Chrono.cpp  Chrono.hpp  Complement.cpp  Complement.hpp  ConstraintBase.hpp  Constraints.cpp  Definition.cpp  Definition.hpp  Duty.cpp  Duty.hpp  IoController.cpp  IoController.hpp  OptEngine.cpp  OptEngine.hpp  Pairing.cpp  Pairing.hpp  Parser.hpp  Sector.cpp  Sector.hpp  Solution.cpp  Solution.hpp  Utility.hpp  main.cpp
src/Rule/: Common.cpp  Common.hpp  DutyRuleBase.cpp  DutyRuleBase.hpp  DutyRuleTransit.cpp  DutyRuleTransit.hpp  RuleBase.cpp  RuleBase.hpp
src/Sector/: DataModel.hpp  Sector.cpp  Sector.hpp
src/file/: FieldFormat.hpp  FileHandler.cpp  FileHandler.hpp  IoController.cpp  IoController.hpp  Parser.hpp  SectorFile.hpp
unit_test/: IoTest.cpp  IoTest.hpp  TestDefinition.cpp  TestDefinition.hpp  TestUtility.cpp  TestUtility.hpp
